--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ html, body {
     left: 24px;
   }
   
-  /* 메인 타이틀 (페이지 헤더) */
   .main-title {
-    text-align: center;
-    font-size: 35px; /* 타이틀은 35px */
-    font-weight: 900;
-    margin-top: 0;
-    margin-bottom: 0;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    margin: 2px auto 0; 
+    display: block;
   }
+
   
   /* 난이도 선택 컨테이너 */
   .level-container {
@@ -310,6 +310,10 @@ html, body {
     }
     .logo {
       position: static;       
+    }
+
+    .main-title {
+      position: static;  
     }
    
     #customIdeaInput {
