--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ html, body {
   }
   
   .main-title {
-    width: 100%;
-    max-width: 400px;
+    width: 400px;    
     height: auto;
     margin: 2px auto 0; 
     display: block;
