--- a/style.css
+++ b/style.css
@@ -31,10 +31,11 @@ html, body {
   }
   
   .main-title {
-    width: 450px;    
-    height: auto;
-    margin: 2px auto 0; 
     display: block;
+    margin: 2px auto 0; 
+    width: 90%;
+    max-width: 450px;    
+    height: auto;
   }
 
   
